# DeleteOldFiles

./: .clang-format  .gitignore  CMakeLists.txt  DeleteOldFiles.pro  README.md  gpl.txt
src/: Application.cpp  Application.hpp  DeleteOldFiles.pro  DeleteOldFiles.rc  DirectoryGuide.cpp  DirectoryGuide.hpp  DirectoryTreeRemover.cpp  DirectoryTreeRemover.hpp  DirectoryTreeRemoverThread.cpp  DirectoryTreeRemoverThread.hpp  FileRemover.cpp  FileRemover.hpp  Icons.cpp  Icons.hpp  Images.qrc  MainWindow.cpp  MainWindow.hpp  MessagesTreeWidget.cpp  MessagesTreeWidget.hpp  MessagesWidget.cpp  MessagesWidget.hpp  Settings.cpp  Settings.hpp  main.cpp
src/PERA/: PERA_AboutDialog.cpp  PERA_AboutDialog.hpp  PERA_Application.cpp  PERA_Application.hpp  PERA_MainWindow.cpp  PERA_MainWindow.hpp
tests/: IconsTest.cpp  SettingsTest.cpp
